// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary with 0, 2 or more expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $5,535.00
  </h1>
</div>
`;

exports[`should render expense summary with 1 expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $10.00
  </h1>
</div>
`;
